2001-07-26  Tom Tromey  <tromey@redhat.com>

	* lisp.am (install-@DIR@LISP): Removed spurious `@'.  From Bruno
	Haible.

2001-07-15  Gary V. Vaughan  <gary@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE):  Bumped the version number to
	1.4-p5a.

	Automake 1.4-p5 was released.

	* NEWS: Updated.
	* config.guess, config.sub, texinfo.tex: Updated from master
	copies at GNU.
	* configure.in (AM_INIT_AUTOMAKE): Set the fork identifier to
	patch level 5, 1.4-p5.
	* stamp-vti: Regenerated.
	* version.texi: Ditto.
	* configure: Ditto.
	* Makefile.in: Ditto.
	* m4/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

	automake.in (scan_one_configure_file):  AM_PROG_LIBTOOL is
	still used regularly.

	* lib/missing: Updated.  Added comment explaining configure.ac
	oddity.

	From Bruno Haible <haible@ilog.fr>:
	(install-@DIR@LISP): Handle case where lispdir is not defined.
	(uninstall-@DIR@LISP): Likewise.

	From Bruno Haible <haible@ilog.fr>:
	* lispdir.am (uninstall-@DIR@LISP): DESTDIR was missing.

	From Bruno Haible <haible@ilog.fr>:
	* subdirs.am (distclean-recursive): Work around a bug in
	/bin/sh on FreeBSD which breaks the loop prematurely.
	* Makefile.in: Regenerated.

	From Marius Vollmer <mvo@zagadka.ping.de>:
	* automake.in (handle_texinfo): Version.texi files might be
	needed in more than one directory.

	* remake.am (config.status): Depends on configure, not
	configure.in.
	* Makefile.in: Regenerated.
	* m4/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.
	Reported by Nicolas Joly <njoly@pasteur.fr>

	* automake.in (usage): List distributed files correctly.
	Reported by Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in: Update copyright messages to include 2001.
	* automake.in: Ditto.
	* missing: Ditto.
	* texinfos.am: Ditto.
	Reported by Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>

2001-07-15  Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in (scan_configure, add_file):  Handle the full
	macro name even if it contains numbers, such as I18N.
