@@ -1,3 +1,9 @@
+2001-08-18  Gary V. Vaughan  <gary@gnu.org>
+
+	Backported from development branch.
+	* automake.in (usage): Rewrote code to handle columnization.
+	From Alexey Mahotkin and Maxim Sinev.
+
 2001-07-26  Tom Tromey  <tromey@redhat.com>
 
 	* lisp.am (install-@DIR@LISP): Removed spurious `@'.  From Bruno
